listings/ch06-enums-and-pattern-matching/no-listing-10-non-exhaustive-match/output.txt
$ cargo run
   Compiling enumy v0.1.0 (file:///projects/enumy)
error[E0004]: non-exhaustive patterns: `None` not covered
 --> src/main.rs:3:15
  |
3 |         match x {
  |               ^ pattern `None` not covered
  |
  = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
error: could not compile `enumy`.

To learn more, run the command again with --verbose.
